--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta name="theme-color" content="#0b5ed7" />
 
   <!-- CSS -->
-  <link rel="preload" href="/css/styles.css" as="style" />
-  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="preload" href="css/styles.css" as="style" />
+  <link rel="stylesheet" href="css/styles.css" />
 
   <!-- Favicons (placeholder) -->
   <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
@@ -165,6 +165,6 @@
   </dialog>
 
   <!-- JS -->
-  <script src="/js/script.js" defer></script>
+  <script src="js/script.js" defer></script>
 </body>
 </html>
